Fixed try-catch blocks catching Throwable Minor improvements